fix alignment

--- a/TRIBUTEPAGE(PROJECT)/styles.css
+++ b/TRIBUTEPAGE(PROJECT)/styles.css
@@ -16,6 +16,12 @@ main {
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
+#main > p {
+    text-align: center;
+    font-style: italic;
+    margin-top: 0;
+}
+
 #title {
   text-align: center;
   font-size: 2.8rem;
